# Lai

./: .gitignore  README.md  audio_test_2.py  main.py  pyproject.toml  requirements.txt
docs/: _config.yml  index.md  page1.md  page2.md
docs/_data/home/: introduction.yml  pages.yml  sections.yml  timeline.yml
docs/_data/source/: agent.yml  ui.yml  utils.yml
docs/_layouts/: analysis.html  default.html  documentation.html
docs/assets/css/: style.scss
docs/code_docs/: page1.md  page2.md  page3.md
notebooks/: fine_tuning.ipynb  hf_data_1.ipynb  hf_data_2.ipynb  hf_data_3.ipynb
src/agent/: agent.py
src/agent/tools/: tools.py
src/ui/: main.py  main_page.py
src/utils/: agent_call.py  caches.py  pdf.py  stt.py  text_utilities.py
testing/: agent_test_1.py  audio_test_1.py  audio_test_2.py  audio_test_3.py  live_audio.py  pdf_test.py  pdf_test_1.py  pdf_test_2.py  tavily.py  transcript_test_1.py  transcript_test_2.py
testing/utils/: setup.py
